#47 - Removed ttlCost and ttlWeight from sheet total calculations and updated rounding so that it shows at most two decimal places. Also corrected issue with the wrong number being calculated for the totals.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -626,8 +626,8 @@
 										<td style="width: 1em;"><span>{{item.data.data.tl}}</span></td>
 										<td style="width: 1em;"><span>{{item.data.data.lc}}</span></td>
 										<td style="width: 1.5em;"><span>{{item.data.data.quantity}}</span></td>
-										<td style="text-align: center;"><span>{{item.data.data.ttlCost}}</span></td>
-										<td style="text-align: center;"><span>{{item.data.data.ttlWeight}}</span></td>
+										<td style="text-align: center;"><span>{{item.data.data.cost}}</span></td>
+										<td style="text-align: center;"><span>{{item.data.data.weight}}</span></td>
 										<td style="width: 62px;"><span>{{item.data.data.equipStatus}}</span></td>
 										<td class="item-controls" style="width: 30px;">
 											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
@@ -645,8 +645,8 @@
 						<td><span></span></td>
 						<td><span></span></td>
 						<td><span class="bold">Totals:</span></td>
-						<td style="text-align: center;"><span>{{actor.data.data.bio.carriedValue}}</span></td>
-						<td style="text-align: center;"><span>{{actor.data.data.bio.carriedWeight}}</span></td>
+						<td style="text-align: center;"><span>{{log actor.data.data.bio.carriedValue}} {{actor.data.data.bio.carriedValue}}</span></td>
+						<td style="text-align: center;"><span>{{log actor.data.data.bio.carriedWeight}} {{actor.data.data.bio.carriedWeight}}</span></td>
 						<td><span></span></td>
 						<td class="item-controls"></td>
 					</tr>
