#4 Fixed display and corrected issue where dr and hit location arrows were conflicting.

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1739,3 +1739,8 @@ attribute-senses {
 .item-college {
 	width: 11em;
 }
+
+.dr-damage-type-buttons {
+	display: flex;
+	justify-content: space-around;
+}
