Added tbb to the damage types tooltip

--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -118,6 +118,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
@@ -198,6 +199,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
@@ -289,6 +291,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
