--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -132,6 +132,7 @@
                                     pi+: Large Piercing<br>
                                     pi++: Huge Piercing<br>
                                     tox: Toxic<br>
+                                    tbb: Tight Beam Burning<br>
                                     dam: Untyped<br>
                                     <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                     ex: Explosive<br>
@@ -215,6 +216,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
@@ -307,6 +309,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
