--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -213,6 +213,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
@@ -293,6 +294,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
@@ -377,6 +379,7 @@
                                         pi+: Large Piercing<br>
                                         pi++: Huge Piercing<br>
                                         tox: Toxic<br>
+                                        tbb: Tight Beam Burning<br>
                                         dam: Untyped<br>
                                         <span style="text-decoration: underline">Valid modifiers are:</span><br>
                                         ex: Explosive<br>
