--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -645,8 +645,8 @@
 						<td><span></span></td>
 						<td><span></span></td>
 						<td><span class="bold">Totals:</span></td>
-						<td style="text-align: center;"><span>{{log actor.data.data.bio.carriedValue}} {{actor.data.data.bio.carriedValue}}</span></td>
-						<td style="text-align: center;"><span>{{log actor.data.data.bio.carriedWeight}} {{actor.data.data.bio.carriedWeight}}</span></td>
+						<td style="text-align: center;"><span>{{actor.data.data.bio.carriedValue}}</span></td>
+						<td style="text-align: center;"><span>{{actor.data.data.bio.carriedWeight}}</span></td>
 						<td><span></span></td>
 						<td class="item-controls"></td>
 					</tr>
