#22 Added validation for TL and SM to ensure it is a non-blank number

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -28,7 +28,7 @@
                     <div>
                         <div class="bold label right">
 							<span>SM:</span>
-                            <input type="text" name="data.bio.sm.value"
+                            <input type="number" name="data.bio.sm.value"
                                    value="{{data.data.bio.sm.value}}" placeholder="Size Mod"
 								   style="width: 80%;" data-dtype="Number"/>
                         </div>
@@ -42,7 +42,7 @@
                     <div>
                         <div class="bold label right" style="text-align: left">
 							<span>Weight:</span>
-                            <input type="text" name="data.bio.weight.value" style="width: 35%"
+                            <input type="number" name="data.bio.weight.value" style="width: 35%"
                                    value="{{data.data.bio.weight.value}}" placeholder="Weight" data-dtype="Number"/>
 							<span>lbs</span>
                         </div>
@@ -50,11 +50,11 @@
                     <div>
                         <div class="bold label right">
 							<span>TL:</span>
-                            <input type="text" name="data.bio.tl.value"
+                            <input type="number" name="data.bio.tl.value"
                                    value="{{data.data.bio.tl.value}}" placeholder="TL"
                                    style="width: 40%;" data-dtype="Number"/>
 							<span>Pts:</span>
-                            <input type="text" name="data.bio.tl.points"
+                            <input type="number" name="data.bio.tl.points"
                                    value="{{data.data.bio.tl.points}}" placeholder="points"
                                    style="width: 40%;" data-dtype="Number"/>
                         </div>
