--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -250,6 +250,16 @@
                     </div>
                 </div>
 
+                <div>
+                    <label>
+                        Tweak Weight
+                    </label>
+                    <label>
+                        x{{data.data.laserDesign.weightTweak}}
+                    </label>
+                    <input type="range" min="0.85" max="2" step="0.05" name="data.laserDesign.weightTweak" value="{{data.data.laserDesign.weightTweak}}" data-dtype="Number">
+                </div>
+
                 <table>
                     <tr>
                         <td>TL</td>
