#9 WIP Laser - Added various laser colours and the effect of water and vacum on range

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -302,10 +302,40 @@
                     </tr>
                     <tr>
                         <td>{{data.data.tl}}</td>
-                        <td>{{item.name}}</td>
+                        <td>{{item.name}} - Air</td>
                         <td>{{data.data.laserDesign.outputDamage}}</td>
                         <td>{{data.data.laserDesign.outputAcc}}</td>
                         <td>{{data.data.laserDesign.outputRange}}</td>
+                        <td>{{data.data.laserDesign.outputWeight}}</td>
+                        <td>{{data.data.laserDesign.outputRoF}}</td>
+                        <td>{{data.data.laserDesign.outputShots}}</td>
+                        <td>{{data.data.laserDesign.outputST}}</td>
+                        <td>{{data.data.laserDesign.outputBulk}}</td>
+                        <td>{{data.data.laserDesign.outputRcl}}</td>
+                        <td>{{data.data.cost}}</td>
+                        <td>{{data.data.lc}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{data.data.tl}}</td>
+                        <td>{{item.name}} - Space</td>
+                        <td>{{data.data.laserDesign.outputDamageSpace}}</td>
+                        <td>{{data.data.laserDesign.outputAccSpace}}</td>
+                        <td>{{data.data.laserDesign.outputRangeSpace}}</td>
+                        <td>{{data.data.laserDesign.outputWeight}}</td>
+                        <td>{{data.data.laserDesign.outputRoF}}</td>
+                        <td>{{data.data.laserDesign.outputShots}}</td>
+                        <td>{{data.data.laserDesign.outputST}}</td>
+                        <td>{{data.data.laserDesign.outputBulk}}</td>
+                        <td>{{data.data.laserDesign.outputRcl}}</td>
+                        <td>{{data.data.cost}}</td>
+                        <td>{{data.data.lc}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{data.data.tl}}</td>
+                        <td>{{item.name}} - Underwater</td>
+                        <td>{{data.data.laserDesign.outputDamageWater}}</td>
+                        <td>{{data.data.laserDesign.outputAccWater}}</td>
+                        <td>{{data.data.laserDesign.outputRangeWater}}</td>
                         <td>{{data.data.laserDesign.outputWeight}}</td>
                         <td>{{data.data.laserDesign.outputRoF}}</td>
                         <td>{{data.data.laserDesign.outputShots}}</td>
